--- a/app/src/main/res/layout/alert_item.xml
+++ b/app/src/main/res/layout/alert_item.xml
@@ -3,28 +3,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-
+    android:background="?attr/selectableItemBackground"
     android:padding="16dp">
 
     <TextView
         android:id="@+id/alert_titre"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
-        tools:text="Titre"
+        android:text="@string/alert_title"
+        style="@style/TextAppearance.SchoolMate.ListItemTitle"
         android:textSize="16sp" />
 
     <TextView
         android:id="@+id/alert_description"
-        android:layout_width="80dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/alert_titre"
-        tools:text="petit titre"
+        android:text="@string/submitted_alert"
         android:textSize="14sp" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/alert_sta"
-        android:layout_width="80dp"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         android:elevation="4dp"
@@ -35,8 +36,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            tools:text="Status"
-            android:textSize="14sp" />
+            android:paddingHorizontal="19dp"
+            android:paddingVertical="4dp"
+            android:text="@string/status_alert_preview"
+            android:textColor="@color/alerts_pending"
+            style="@style/TextAppearance.Material3.BodySmall" />
 
     </androidx.cardview.widget.CardView>
 
