--- a/app/src/main/res/layout/activity_alert_details.xml
+++ b/app/src/main/res/layout/activity_alert_details.xml
@@ -66,7 +66,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="@string/complainant_name"
+                    android:text="@string/alert_maker_name"
                     android:paddingStart="4dp"
                     android:textSize="18sp"
                     android:textStyle="bold" />
@@ -136,7 +136,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:contentDescription="@string/complaint_type_icon_description"
+                            android:contentDescription="@string/alert_type_icon_description"
                             android:src="@drawable/ic_tree_structure" />
 
                         <TextView
@@ -294,7 +294,7 @@
     <include android:id="@+id/alert_empty" layout="@layout/empty_overlay" android:visibility="gone" tools:visibility="gone" />
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/assign_alert_map_button"
+        android:id="@+id/show_alert_map_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
@@ -305,7 +305,7 @@
         android:drawableEnd="@color/white"
         android:textColor="@color/white"
         android:contentDescription="@string/location_button_description"
-        android:text="@string/assign_button_text"/>
+        android:text="@string/show_alert_button_text"/>
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
