feat: Adding the place suggestions feature

--- a/app/src/main/res/layout/suggestions_item.xml
+++ b/app/src/main/res/layout/suggestions_item.xml
@@ -53,6 +53,12 @@
             android:layout_height="wrap_content"
             android:text="@string/suggestion_description_placeholder"/>
 
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/suggestion_date_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/suggestion_date_placeholder"/>
+
     </androidx.appcompat.widget.LinearLayoutCompat>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
