--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -63,57 +63,78 @@
             </androidx.appcompat.widget.LinearLayoutCompat>
 
             <androidx.appcompat.widget.LinearLayoutCompat
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginTop="25dp"
-                android:gravity="center_horizontal"
-                android:orientation="horizontal">
+                android:layout_gravity="center"
+                android:orientation="vertical">
 
-                <include
-                    android:layout_width="wrap_content"
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="13dp"
-                    android:id="@+id/alerts_home_button"
-                    layout="@layout/home_button"
-                    app:icon="@{@drawable/ic_warning}"
-                    app:text="@{@string/alerts_title}" />
+                    android:layout_gravity="center"
+                    android:layout_marginVertical="4dp"
+                    android:orientation="horizontal">
 
-                <include
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="13dp"
-                    android:id="@+id/documents_home_button"
-                    layout="@layout/home_button"
-                    app:icon="@{@drawable/ic_file}"
-                    app:text="@{@string/documents_title}" />
+                    <include
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="13dp"
+                        android:id="@+id/alerts_home_button"
+                        layout="@layout/home_button"
+                        app:icon="@{@drawable/ic_warning}"
+                        app:text="@{@string/alerts_title}" />
 
-                <include
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="13dp"
-                    android:id="@+id/navigation_home_button"
-                    layout="@layout/home_button"
-                    app:icon="@{@drawable/ic_navigation_arrow}"
-                    app:text="@{@string/navigation_title}" />
+                    <include
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="13dp"
+                        android:id="@+id/users_home_button"
+                        layout="@layout/home_button"
+                        app:icon="@{@drawable/ic_user}"
+                        app:text="@{@string/users_title}" />
 
-                <include
-                    android:layout_width="wrap_content"
+                    <include
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="13dp"
+                        android:id="@+id/navigation_home_button"
+                        layout="@layout/home_button"
+                        app:icon="@{@drawable/ic_navigation_arrow}"
+                        app:text="@{@string/navigation_title}" />
+
+
+                </androidx.appcompat.widget.LinearLayoutCompat>
+
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="13dp"
-                    android:id="@+id/users_home_button"
-                    layout="@layout/home_button"
-                    app:icon="@{@drawable/ic_user}"
-                    app:text="@{@string/users_title}" />
+                    android:gravity="center_horizontal"
+                    android:layout_marginVertical="4dp"
+                    android:orientation="horizontal">
+
+                    <include
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="13dp"
+                        android:id="@+id/documents_home_button"
+                        layout="@layout/home_button"
+                        app:icon="@{@drawable/ic_file}"
+                        app:text="@{@string/documents_title}" />
+
+
+                    <include
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="13dp"
+                        android:id="@+id/suggestions_home_button"
+                        layout="@layout/home_button"
+                        app:icon="@{@drawable/ic_map_pin_fill}"
+                        app:text="@{@string/suggestions_title}" />
+
+                </androidx.appcompat.widget.LinearLayoutCompat>
 
             </androidx.appcompat.widget.LinearLayoutCompat>
-            <include
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="13dp"
-                android:id="@+id/suggestions_home_button"
-                layout="@layout/home_button"
-                app:icon="@{@drawable/ic_suggestions}"
-                app:text="@{@string/suggestions_title}" />
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
