--- a/app/src/main/res/layout/suggestions_item.xml
+++ b/app/src/main/res/layout/suggestions_item.xml
@@ -51,6 +51,8 @@
             android:id="@+id/suggestion_description_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:text="@string/suggestion_description_placeholder"/>
 
         <androidx.appcompat.widget.AppCompatTextView
